--- a/plugin.xml
+++ b/plugin.xml
@@ -57,7 +57,7 @@
     <!-- Android -->
     <platform name="android">
         <!-- Pushy SDK -->
-        <framework src="me.pushy:sdk:1.0.33" />
+        <framework src="me.pushy:sdk:1.0.35" />
 
         <!-- Pushy Permissions -->
         <config-file target="AndroidManifest.xml" parent="/*">
@@ -99,6 +99,12 @@
             <!-- Pushy Socket Service -->
             <!-- Do not modify - internal socket service -->
             <service android:name="me.pushy.sdk.services.PushySocketService"/>
+
+            <!-- Pushy Job Service (added in Pushy SDK 1.0.35) -->
+            <!-- Do not modify - internal service -->
+            <service android:name="me.pushy.sdk.services.PushyJobService"
+                android:permission="android.permission.BIND_JOB_SERVICE"
+                android:exported="true" />
         </config-file>
 
         <!-- Pushy Plugin -->
