Migrate to android.intent.action.MY_PACKAGE_REPLACED (Android O+)

--- a/plugin.xml
+++ b/plugin.xml
@@ -83,8 +83,7 @@
             <!-- Do not modify - internal BroadcastReceiver that restarts the listener service -->
             <receiver android:name="me.pushy.sdk.receivers.PushyUpdateReceiver" android:exported="false">
                 <intent-filter>
-                    <action android:name="android.intent.action.PACKAGE_REPLACED" />
-                    <data android:scheme="package" />
+                    <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
                 </intent-filter>
             </receiver>
 
