Fix #11: Notification listener not called on app cold start

--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
         <config-file target="config.xml" parent="/*">
             <feature name="PushyPlugin">
                 <param name="ios-package" value="PushyPlugin"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
 
