Adding support for an enterprise certificate for use with self signed certificates.
Adding java and javascript handling for above.

Adding script to copy any certificates found in [project root]/resources/android/raw to [project root]/platforms/android/res/raw

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pushy-cordova",
-  "version": "1.0.25",
+  "version": "1.0.26-alpha",
   "description": "The official Pushy SDK for Cordova apps.",
   "keywords": [
     "pushy",
