--- a/plugin.xml
+++ b/plugin.xml
@@ -105,6 +105,14 @@
             <service android:name="me.pushy.sdk.services.PushyJobService"
                 android:permission="android.permission.BIND_JOB_SERVICE"
                 android:exported="true" />
+
+            <!-- Pushy FCM Fallback Service -->
+            <!-- Do not modify - internal service -->
+            <service android:name="me.pushy.sdk.services.PushyFirebaseService" android:exported="false">
+                <intent-filter>
+                    <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                </intent-filter>
+            </service>
         </config-file>
 
         <!-- Pushy Plugin -->
