--- a/plugin.xml
+++ b/plugin.xml
@@ -53,8 +53,8 @@
 
     <!-- Android -->
     <platform name="android">
-        <!-- Pushy SDK -->
-        <framework src="me.pushy:sdk:1.0.87" />
+        <!-- Pushy Android SDK -->
+        <framework src="me.pushy:sdk:1.0.93" />
 
         <!-- Pushy Permissions -->
         <config-file target="AndroidManifest.xml" parent="/*">
