--- a/plugin.xml
+++ b/plugin.xml
@@ -93,14 +93,14 @@
             </receiver>
 
             <!-- Pushy Socket Service -->
-            <!-- Do not modify - internal socket service -->
-            <service android:name="me.pushy.sdk.services.PushySocketService"/>
+            <!-- Do not modify - internal service -->
+            <service android:name="me.pushy.sdk.services.PushySocketService" android:stopWithTask="false" />
 
             <!-- Pushy Job Service (added in Pushy SDK 1.0.35) -->
             <!-- Do not modify - internal service -->
             <service android:name="me.pushy.sdk.services.PushyJobService"
                 android:permission="android.permission.BIND_JOB_SERVICE"
-                android:exported="true" />
+                android:stopWithTask="false" />
 
             <!-- Pushy FCM Fallback Service -->
             <!-- Do not modify - internal service -->
