--- a/plugin.xml
+++ b/plugin.xml
@@ -54,7 +54,7 @@
     <!-- Android -->
     <platform name="android">
         <!-- Pushy Android SDK -->
-        <framework src="me.pushy:sdk:1.0.113" />
+        <framework src="me.pushy:sdk:1.0.118" />
         
         <!-- AppCompat (Android X) -->
         <framework src="androidx.appcompat:appcompat:1.0.2" />
@@ -66,6 +66,7 @@
             <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+            <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
         </config-file>
 
         <!-- Pushy Declarations -->
